ft: add resource versiong route
